--- a/run_mac.app/Contents/Info.plist
+++ b/run_mac.app/Contents/Info.plist
@@ -42,11 +42,11 @@
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>322</real>
+		<real>421</real>
 		<key>savedFrame</key>
-		<string>20 187 700 672 0 0 1440 877 </string>
+		<string>20 190 700 672 0 0 1440 877 </string>
 		<key>selectedTab</key>
-		<string>result</string>
+		<string>description</string>
 	</dict>
 </dict>
 </plist>
