--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 BingRewards/src/config.py
 BingRewards/drivers/
-run_windows.vbs
+run.vbs
 
 
 ## Ignore Visual Studio temporary files, build results, and
