--- a/BingRewards/requirements.txt
+++ b/BingRewards/requirements.txt
@@ -1,5 +1,5 @@
-pip==19.2
-python-dateutil==2.6.1
-selenium==3.8.0
-setuptools==28.8.0
-six==1.11.0
+pip>=21.3.1
+python-dateutil>=2.6.1
+selenium>=3.8.0
+setuptools>=28.8.0
+six>=1.11.0
